<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddressActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvChooseAddressDesc"
                    android:text="@string/choose_address_desc"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:textColor="#333333"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/btnAddNew"
                    android:text="@string/add_new"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:id="@+id/rgAddress"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/choose_paymode_desc"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:textColor="#333333"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:id="@+id/rgPayment"
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/rbtnPayTM"
                        android:tag="@string/paytm"
                        android:visibility="gone"
                        android:drawableRight="@drawable/paytm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <RadioButton
                        android:id="@+id/rbtnCod"
                        android:tag="@string/pod"
                        android:checked="true"
                        android:text="@string/pod_str"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:text="@string/choose_delivery_slot"
                    android:textColor="#333333"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtSlotDate"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text=""
                    android:gravity="left"
                    android:textColor="#000"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:id="@+id/rgSlot"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/order_summary"
                    android:layout_width="match_parent"
                    android:textColor="#333333"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/order_total"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtOrderTotal"
                    android:text=""
                    android:gravity="right"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/delivery_charge"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtDelievryCharge"
                    android:text=""
                    android:gravity="right"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/sanitization_charge"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtSanitize"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="₹ 10.0"
                    android:gravity="right"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/net_amount_payable"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:textColor="#000"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtNetPayableAmount"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text=""
                    android:gravity="right"
                    android:textColor="#000"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/free_delivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnConfirm"
                android:text="@string/confirm"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <ProgressBar
            android:id="@+id/mProgress"
            android:visibility="visible"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:theme="@style/RedAccent"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>