<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SendActivity">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"/>
            <EditText
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_title"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="200"
                android:visibility="visible"
                tools:textSize="15sp" />

            <EditText
                android:id="@+id/txtMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/message"
                android:inputType="text"
                android:maxLength="1024"
                android:visibility="visible"
                android:layout_marginBottom="20dp"
                tools:textSize="15sp" />

            <ListView
                android:id="@+id/myListView"
                android:layout_width="match_parent"
                android:layout_height="257dp"
                android:layout_marginBottom="20dp" />
            <Button
                android:id="@+id/btnSend"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:text="@string/send_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progress_loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:theme="@style/RedAccent"
            android:visibility="invisible" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>